# calcentral-gcal

./: .replit  Dockerfile  class.example.txt  ics.py  main.py  parser.py  pyproject.toml  structs.py  text_parser.py
attached_assets/: Pasted-INFO-127-0-0-1-51367-POST-parse-text-schedule-HTTP-1-1-200-OK-Parsed-courses-Course-id--1756304399242_1756304399243.txt
tests/: test_ics_generation.py  test_parser.py
