[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = [{ name = "Sanchit Ram Arvind", email = "sanchitram@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "pytesseract>=0.3.10",
    "python-dateutil>=2.8.2",
]
