[tool.poetry]
name = "calcentral-ics"
version = "0.1.0"
description = "Download your schedule as an ICS file from Berkeley's Schedule Planner Tool."
authors = ["Sanchit Ram Arvind <sanchitram@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
pillow = "^10.0.0"
opencv-python = "^4.8.0"
pytesseract = "^0.3.10"
python-dateutil = "^2.8.2"
pytest = "^8.0.0"
ruff = "^0.12.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
